<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emptyRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srlEnableLoadMore="false"
    app:srlEnableRefresh="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/emptyImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/emptyTextView"
            style="@style/TextViewMaxLines2End"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textColor="@color/main_orange"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyImageView"
            tools:text="@string/none" />

        <Button
            android:id="@+id/toLogin"
            style="@style/ButtonEliminatePaddingStyle"
            android:layout_width="110dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/to_login"
            android:textColor="@color/main_orange"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyTextView"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.scwang.smart.refresh.layout.SmartRefreshLayout>