<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:animateLayoutChanges="true"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="0dp"
    tools:context=".main.mine.login.NewUserRegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/white">

        <!--getVerificationCode-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/getVerificationCodeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/verificationCodeDirections"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/we_will_send_the_verification_code_to_you_in_the_form_of_sMS_and_please_note_that_check"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/getVerificationCode"
                style="@style/ButtonEliminatePaddingStyle"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:text="@string/get_verification_code"
                android:textColor="@color/main_orange"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verificationCodeDirections" />

            <EditText
                android:id="@+id/inputVerificationCode"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:autofillHints="@string/please_enter_verification_code"
                android:background="@color/transparent"
                android:hint="@string/please_enter_verification_code"
                android:inputType="number"
                android:maxLength="4"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="13sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/getVerificationCode"
                app:layout_constraintEnd_toStartOf="@id/getVerificationCode"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/inputPasswordDirections"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/please_set_login_password"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/inputPasswordView"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPasswordDirections"
                tools:background="@color/initial" />

            <ImageView
                android:layout_width="44.5dp"
                android:layout_height="35dp"
                android:contentDescription="@string/image_view"
                android:padding="12dp"
                android:src="@mipmap/ic_eye_close"
                app:layout_constraintBottom_toBottomOf="@id/inputPasswordView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputPasswordView" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints="please_enter_6_20_characters"
                android:background="@color/transparent"
                android:hint="@string/please_enter_6_20_characters"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/please_enter_6_20_characters"
                android:textColor="@color/textColor"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/inputPasswordView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputPasswordView" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/password_description"
                android:textColor="@color/textColor"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPasswordView"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/determine"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:text="@string/determine"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>