<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_bg"
    tools:context=".main.mine.login.LoginActivity">

    <!--默认 StatusBar 高度为 20dp
    后续动态调整 content view 的 marginTop-->
    <!--18 + 12 + 12 = 42-->

    <ImageView
        android:id="@+id/close"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_view"
        android:padding="12dp"
        android:src="@mipmap/ic_white_cross"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qqIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="92.5dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/image_view"
        android:src="@mipmap/ic_qq_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/qqText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/qq_login"
        android:textColor="@color/main_orange"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/qqIcon"
        app:layout_constraintStart_toStartOf="@id/qqIcon"
        app:layout_constraintTop_toBottomOf="@id/qqIcon" />

    <View
        android:id="@+id/qqLoginBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/qqText"
        app:layout_constraintEnd_toEndOf="@id/qqIcon"
        app:layout_constraintStart_toStartOf="@id/qqIcon"
        app:layout_constraintTop_toTopOf="@id/qqIcon" />

    <ImageView
        android:id="@+id/wechatIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="92.5dp"
        android:layout_marginBottom="38dp"
        android:contentDescription="@string/image_view"
        android:src="@mipmap/ic_wechat_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/wechatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/qq_login"
        android:textColor="@color/main_orange"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/wechatIcon"
        app:layout_constraintStart_toStartOf="@id/wechatIcon"
        app:layout_constraintTop_toBottomOf="@id/wechatIcon" />

    <View
        android:id="@+id/wechatLoginBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wechatText"
        app:layout_constraintEnd_toEndOf="@id/wechatIcon"
        app:layout_constraintStart_toStartOf="@id/wechatIcon"
        app:layout_constraintTop_toTopOf="@id/wechatIcon" />

    <TextView
        android:id="@+id/switcherBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/login_at_bottom_card"
        android:gravity="center"
        android:shadowColor="@color/black_alpha_8"
        android:shadowDx="0"
        android:shadowDy="20"
        android:shadowRadius="3.0"
        android:text="@string/no_account_yet_immediately_registered"
        android:textColor="@color/grey_500_alpha_100"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/qqLoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        tools:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/switcherBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

</androidx.constraintlayout.widget.ConstraintLayout>